Update style.css for mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -112,3 +112,9 @@
     -moz-transform: rotateY(180deg);
     pointer-events: none;
 }
+@media screen and (max-width: 400px) {
+.memory-game-blocks {
+    max-width : 100%
+} 
+
+} 
